Fixed letter-spacing and font-weight.

--- a/assets/css/filter-dropdown.scss
+++ b/assets/css/filter-dropdown.scss
@@ -45,8 +45,9 @@
       padding-left: 6px 8px;
 
       font-family: Inter, sans-serif;
-      font-weight: 500;
+      font-weight: 400;
       align-items: center;
+      letter-spacing: 0.5px;
 
       &--small {
         &:hover {
